--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,14 +1,3 @@
-.form-window-ctn {
-  background-color: rgba(0, 0, 0, 0.308);
-  width: 100%;
-  height: 100vh;
-  z-index: 9;
-  display: grid;
-  place-items: center;
-  position: fixed;
-  top: 0;
-}
-
 .window-inner-ctn {
   margin: 1rem;
   background-color: rgb(255, 255, 255);
@@ -21,6 +10,7 @@
 .window-exit-ctn {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   padding: 0.75rem;
 }
 
@@ -89,7 +79,7 @@
 
 @media screen and (min-width: 600px) {
   .window-inner-ctn {
-    width: 35rem;
+    width: 32.5rem;
     min-width: 25vw;
   }
 }
