--- a/src/components/PostSorter/PostSorter.css
+++ b/src/components/PostSorter/PostSorter.css
@@ -38,6 +38,9 @@
 }
 
 .active-sort-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: rgb(240, 240, 240);
   color: black;
 }
